--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -23,10 +23,10 @@
   Mod4 + n
 
   # moving the window and resizing 50% of the width
-"wmctrl -r :ACTIVE: -b remove,maximized_vert,maximized_horz && wmctrl -r :ACTIVE: -e 0,0,0,-1,-1 ; wmctrl -r :ACTIVE: -b add,maximized_vert ; xdotool getactivewindow windowsize 50% 100%"
+"wmctrl -r :ACTIVE: -e 0,0,0,0,0 ; xdotool getactivewindow windowsize 50% 100%"
   Mod4 + Control + Left
 
-"bash wmctrl -r :ACTIVE: -e 0,$(xdpyinfo | awk '/dimensions/ {print $2}' | awk -F'x' '{print $1 / 2}'),0,0,0 ; xdotool getactivewindow windowsize 50% 100%"
+"wmctrl -r :ACTIVE: -e 0,$(xdpyinfo | awk '/dimensions/ {print $2}' | awk -F'x' '{print $1 / 2}'),0,0,0 ; xdotool getactivewindow windowsize 50% 100%"
   Mod4 + Control + Right
   # to close windows and open windows
 "xdotool getwindowfocus windowkill"
