--- a/config
+++ b/config
@@ -31,11 +31,10 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id nm-applet
 
 #########################################################################
-
+# the powermanegement
+exec lxqt-powermanegement
 #setting the image 
 exec feh --bg-scale ~/my-configuration-files/wallpaper/fundo-de-galaxia-em-aquarela.jpg
-#adding the icon of power-management
-exec lxqt-powermanagement
 # enabling the tapclick on touchpad
 exec xinput set-prop $(xinput list | grep "Touchpad" | grep -o 'id=[0-9]*' | grep -o '[0-9]*') "libinput Tapping Enabled" 1
 # adding a new display resolution 2048x1152
@@ -46,12 +45,14 @@ bindsym Mod4+Mod1+Left exec bash ~/my-configuration-files/diminuir-brilho.sh
 bindsym Mod4+Mod1+Right exec bash ~/my-configuration-files/aumentar-brilho.sh
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym Mod4+Mod1+Up exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym Mod4+Mod1+Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym Mod4+Mod1+Up exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +3% && $refresh_i3status
+bindsym Mod4+Mod1+Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -3% && $refresh_i3status
 # start a terminal
 bindsym $mod+Return exec tilix
 # kill focused window
 bindsym $mod+c kill
+# kill the focused window process
+bindsym $mod+k exec xdotool getactivewindow windowkill
 # start dmenu (a program launcher)
 bindsym $mod+l exec --no-startup-id dmenu_run
 
@@ -181,6 +182,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status 
 }
  
