--- a/config
+++ b/config
@@ -32,7 +32,7 @@ exec --no-startup-id nm-applet
 
 #########################################################################
 # the powermanegement
-exec lxqt-powermanegement
+exec --no-startup-id $(which lxqt-powermanagement)
 #setting the image 
 exec feh --bg-scale ~/my-configuration-files/wallpaper/fundo-de-galaxia-em-aquarela.jpg
 # enabling the tapclick on touchpad
@@ -182,6 +182,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status 
+    status_command i3status
 }
  
