--- a/config
+++ b/config
@@ -47,6 +47,7 @@ bindsym Mod4+Mod1+Right exec lxqt-config-brightness -i
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym Mod4+Mod1+Up exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +3% && $refresh_i3status
 bindsym Mod4+Mod1+Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -3% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 # start a terminal
 bindsym $mod+Return exec tilix
 # kill focused window
@@ -56,7 +57,7 @@ bindsym $mod+shift+k exec xdotool getactivewindow windowkill
 # start dmenu (a program launcher)
 bindsym $mod+l exec --no-startup-id dmenu_run
 # command to take a print screen
-bindsym $mod+p exec cd ~/Downloads && scrot print_screen.png
+bindsym $mod+p exec cd ~/Computer-Vault/imagens && scrot print_screen.png
 
 #############################################################################
 
