--- a/config
+++ b/config
@@ -56,8 +56,9 @@ bindsym $mod+c kill
 bindsym $mod+shift+k exec xdotool getactivewindow windowkill
 # start dmenu (a program launcher)
 bindsym $mod+l exec --no-startup-id dmenu_run
-#changes
-bindsym $mod+p exec flameshot gui
+# printscreen commands
+bindsym $mod+p exec flameshot screen
+
 #############################################################################
 
 # Use Mouse+$mod to drag floating windows to their wanted position
