--- a/i3/config
+++ b/i3/config
@@ -58,8 +58,8 @@ bindsym $mod+shift+k exec xdotool getactivewindow windowkill
 bindsym $mod+l exec --no-startup-id dmenu_run
 # printscreen commands
 bindsym $mod+p exec flameshot gui
-# to run dmenu as root
-bindsym $mod+Shift+d exec "sudo dmenu_run"
+# to shutdown now
+bindsym $mod+Shift+d exec shutdown now
 
 #############################################################################
 
